# storage/api-docs/api-docs.json
@@ -28,13 +28,24 @@
             }
         },
         "/command": {
-            "get": {
+            "post": {
                 "summary": "Send a custom command to the Signal CLI",
                 "description": "List of available commands: addDevice,block,daemon,deleteLocalAccountData,getAttachment,getUserStatus,joinGroup,jsonRpc,link,listAccounts,listContacts,listDevices,listGroups,listIdentities,listStickerPacks,quitGroup,receive,register,remoteDelete,removeContact,removeDevice,removePin,send,sendContacts,sendPaymentNotification,sendReaction,sendReceipt,sendSyncRequest,sendTyping,setPin,submitRateLimitChallenge,trust,unblock,unregister,updateAccount,updateConfiguration,updateContact,updateGroup,updateProfile,uploadStickerPack,verify,version",
-                "operationId": "54faece60c58e9d497b5acf14fd7ef3e",
+                "operationId": "command",
+                "parameters": [
+                    {
+                        "name": "command",
+                        "in": "query",
+                        "description": "command string",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "Everything OK"
+                        "description": "successful operation"
                     }
                 }
             }
